stylesheets/_component.datatables.scss
// Regular table styling is handled by _component.tables.scss
// This styles the additional behaviours added by the Datatables plugin

.table.datatable {
    margin-bottom: 0;
}

.dt-row-selected > td {
    background-color: color(background, selected);

    // scss-lint:disable PseudoElement
    @include ie-lte(8) {
        .table-row-select:before {
            content: '\f14a';
        }
    }
    // scss-lint:enable PseudoElement

    .table-row-select::before {
        content: '\f14a';
    }

    a,
    a:link {
        border-bottom-color: color(link, dark);
        color: color(link, dark);
    }
}

.dt-disable-selection .table-selection {
    min-width: 0;
    padding: 0;
    width: 0;

    .table-row-select {
        display: none;
    }
}

// scss-lint:disable SelectorFormat
.datatable .dt-row-selected {
    > .sorting_1,
    &:hover > td {
        background-color: darken(color(background, selected), 3);
    }
}
// scss-lint:enable SelectorFormat

a.dt-button {
    border-right: 1px dotted color(border);
    margin-right: $margin-base-vertical;
    padding-right: $margin-base-vertical;
}

.dt-buttons {
    float: left;

    > a,
    > button {
        background-color: transparent;
        border: 0;
        border-right: 1px dotted color(border);
        color: color(link);
        float: left;
        line-height: 30px;
        padding: 0 $padding-base-horizontal;

        &:hover {
            color: color(link, hover);
        }
    }
}

.datatable {
    // scss-lint:disable SelectorFormat
    td,
    th {
        &.sorting:hover,
        &.sorting_asc:hover,
        &.sorting_desc:hover {
            background-color: color(background, dark);
            cursor: pointer;

            &::after {
                color: color(link);
            }
        }

        &.sorting::after,
        &.sorting_asc::after,
        &.sorting_desc::after {
            @include icon-FontAwesome();
            font-size: $font-size-base;
            left: 0;
            margin-left: 10px;
        }

        &.sorting::after {
            content: '\f0dc';
            color: color(text, light);
            margin-right: -20px; // prevent arrows wrapping onto next line
        }

        &.sorting_asc::after {
            content: '\f0de';
        }

        &.sorting_desc::after {
            content: '\f0dd';
        }

        &.sorting_disabled::after {
            content: '';
        }

        &.sorting_asc,
        &.sorting_desc {
            background-color: color(background, dark);
        }
    }

    th [href] {
        color: color(text);
    }

    td.sorting_1 {
        background-color: darken(#fff, 3);
    }
    // scss-lint:enable SelectorFormat
}

.table__tr--no-results td {
    padding: 1em 0;
    text-align: center;
}

.table-row-select {
    color: color(grey);
    cursor: pointer;
    font-size: $font-size-base;
    position: relative;
    top: 1px;
}

.dt-row-selected .table-row-select::before,
tr.selected .table-row-select::before {
    color: color(primary);
    content: '\f14a';
}

// scss-lint:disable SelectorFormat
th.sorting_disabled:hover {
    text-decoration: none;
}
// scss-lint:enable SelectorFormat

.table-responsive,
.table-selection {
    text-align: center;
    min-width: 42px;
    max-width: 42px;
    user-select: none;
    width: 42px;

    .btn {
        line-height: 22px;
        padding: 0;
    }
}

// scss-lint:disable SelectorFormat
.dataTables_wrapper {
    position: relative;
}

.dataTables_filter {
    display: inline-block;
}

.dataTables_info {
    display: none;
    float: left;
    line-height: 30px;

    @include respond-min($screen-tablet) {
        display: block;
    }
}

.dataTables_filter {
    float: right;

    [type="search"] {
        border: 1px solid color(border);
        color: black;
        border-radius: 4px;
        margin-left: 10px;
        padding: 5px;

        &:focus {
            border: 1px solid color(primary);
            box-shadow: inset 0 0 0 1px color(primary);
            outline: none;
        }
    }
}

.dataTables_top {
    color: color(text);
    float: left;
    margin-bottom: 10px;
    width: 100%;

    .select-info {
        border-left: 1px dotted color(border);
        margin-left: 10px;
        padding-left: 10px;
    }
}

.dataTables_actions {
    position: absolute;
    font-size: 14px;
    left: 24px;
    top: 62px;
    z-index: 1;

    a {
        color: #666;
        cursor: pointer;
    }
}

.dataTables_bottom {
    display: block;
    margin-top: -1px;
    width: 100%;
}

.paginate_button {
    padding: 5px;
}

// scss-lint:enable SelectorFormat

.datatable .child {
    background-color: #efefef;
    border-bottom: 1px solid color(border);
    padding: 11.5px 0 12px;
}

.table-child-toggle {
    color: color(jadu-blue);
    display: none;
    font-size: 14px;

    .collapsed & {
        display: inline-block;
    }

    .parent &::before {
        color: color(jadu-red);
        content: $minus-sign;
    }
}

.datatable .child ul {
    margin: 0 0 0 65px;
}

.datatable .child ul li {
    display: table-row;
}

.dtr-title {
    display: table-cell;
    padding: 0 5px 0 0;
}

.dtr-data {
    display: table-cell;
    padding: 0 5px;
}

// scss-lint:disable SelectorFormat
.dataTables_empty {
    @extend .no-results;
}

.DTTT_collection {
    opacity: 1;
    background-color: white;
    box-shadow: 0 3px 10px rgba(0, 0, 0, .5);

    > .DTTT_button {
        display: block;
        padding: 5px 10px;
        width: 100%;
    }
}

.dataTables_bottom {
    margin-bottom: 24px;
}

.dataTables_paginate {
    font-size: $font-size-medium;
    text-align: center;
    width: 100%;

    @include respond-min($screen-tablet) {
        text-align: left;
        width: auto;
    }

    .paginate_button {
        @include inline-block;
        color: color(text);
        line-height: $line-height-base * 1.75;
        padding: 0 $gutter-width;
        text-align: center;
        text-decoration: none;
    }

    .paginate_button.previous::before {
        content: '\f100';
        font-family: 'FontAwesome';
        padding-right: 5px;
    }

    .paginate_button.next::after {
        content: '\f101';
        font-family: 'FontAwesome';
        padding-left: 5px;
    }

    .paginate_button.current {
        background-color: darken(color(white), 10%);
    }

    .paginateButton.disabled,
    .ellipsis {
        color: color(text, disabled);
    }
}

.dataTables_bottom .dataTables_length {
    display: block;
    float: none;
    font-family: $font-size-small;
    line-height: 42px;
    margin-bottom: 10px;
    text-align: center;
    width: 100%;

    @include respond-min($screen-tablet) {
        display: inline-block;
        float: right;
        margin-bottom: 0;
        text-align: left;
        width: auto;
    }
}

.dataTables_wrapper > .table-container {
    clear: both; // make sure container appears in correct place when used in datatable context
    margin-bottom: 0; // make sure pagination sits directly underneath the table
}

// Hide the responsive column that usually contains the (+) control when using
// horizontal version
.datatable.table--horizontal .table-responsive {
    display: none;
}

// scss-lint:enable SelectorFormat

.dtr-details {
    .dtr-title {
        a {
            @include respond-max($screen-smaller) {
                border-bottom: 0;
                color: color(black);
                font-family: $font-family-regular;
            }
        }
    }

    .dtr-data {
        a {
            @include respond-max($screen-smaller) {
                border-bottom: 0;
            }
        }
    }
}

